# tenuo

./: .commit-message.txt  .gitattributes  .gitignore  0.103.13  APPROVAL_ENVELOPE_REFACTOR.md  CANONICAL_ERROR_CODES_IMPLEMENTATION.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  DELEGATION_FIX_COMPLETE.md  INTEGRATION_MAINTENANCE.md  LICENSE  Makefile  PATTERN_DOUBLE_STAR_DECISION.md  README.md  READY_TO_COMMIT.md  SECURITY.md  SECURITY_PUBKEY.asc  aat_constraints.als  docker-compose.yml  llms.txt  repro_arg_extraction.py  repro_exception.py  repro_pattern.py  tenuo_crewai_spec_v3.md  test_pattern.py  test_temporal_regressions
tenuo-core/: Cargo.toml  README.md  benchmark_results.txt  build_output.txt  check_output.txt  test_output.txt
tenuo-core/benches/: new_types_benchmarks.rs  warrant_benchmarks.rs
tenuo-core/demo/: setup.sh
tenuo-core/demo/docker/: Dockerfile.agents
tenuo-core/deploy/docker/: Dockerfile.agents  Dockerfile.authorizer  Dockerfile.control  Dockerfile.demo  demo-agent.sh
tenuo-core/deploy/kubernetes/: control-plane.yaml  data-plane-sidecar.yaml
tenuo-core/docs/: determinism-audit.md
tenuo-core/scripts/: demo_keys.sh
tenuo-core/src/: approval.rs  approval_gate.rs  audit.rs  cel.rs  connect_token.rs  constraints.rs  crypto.rs  diff.rs  domain.rs  error.rs  extraction.rs  gateway_config.rs  guard.rs  heartbeat.rs  lib.rs  mcp.rs  payload.rs  planes.rs  python.rs  python_control_plane.rs  revocation.rs  revocation_manager.rs  warrant.rs  wire.rs
tenuo-core/tests/: README.md  approval_gate_merge.rs  attenuation_soundness.rs  canonicalization.rs  cel_stdlib.rs  chain_verification_invariants.rs  conformance.proptest-regressions  conformance.rs  constraint_types.rs  delegation_semantics.rs  determinism.rs  enrollment_flow.rs  guard_merge.rs  integration.rs  invariants.proptest-regressions  invariants.rs  limits.rs  multisig_repro.rs  parental_revocation.rs  pop_canonical_fixture.rs  red_team.rs  repro_chain_inconsistency.rs  repro_object_extraction.rs  revocation.rs  security.rs  test_object_extraction.rs  test_vectors.rs  wire_compatibility.rs  wire_format_compliance.rs  wire_level_invariants.proptest-regressions  wire_level_invariants.rs
tenuo-core/tests/fixtures/: pop_canonical.json
tenuo-python/: .gitignore  CREWAI_SPEC_COMPLIANCE.md  Cargo.toml  GOOGLE_ADK_SECURITY_REVIEW.md  INTEGRATION_CONSISTENCY_UPDATE.md  README.md  RED_TEAM_SUMMARY.md  inspect_graph.py  inspect_nodes.py  mypy.ini  mypy_delegation.ini  pyproject.toml  red_team.py
tenuo-python/docs/: integration-guide.md
tenuo-python/examples/: README.md  __init__.py  a2a_demo.py  approval_policy_demo.py  autogen_demo_guardbuilder_tier1.py  autogen_demo_guardbuilder_tier2.py  autogen_demo_protected.py  autogen_demo_protected_attenuation.py  autogen_demo_protected_tools.py  autogen_demo_unprotected.py  basic_usage.py  chain_demo.py  clearance_demo.py  context_pattern.py  database_protection.py  decorator_example.py  delegation_patterns.py  delegation_receipts.py  error_handling_guide.py  fastapi_integration.py  issuer_execution_pattern.py  kubernetes_integration.py  langchain_integration.py  langchain_mcp_integration.py  langchain_protect_tools.py  langchain_simple.py  langgraph_mcp_integration.py  langgraph_protected.py  mcp-config.yaml  mcp_client.py  mcp_client_demo.py  mcp_integration.py  mcp_research_server.py  mcp_server.py  mcp_server_demo.py  openai_agents_sdk.py  openai_async.py  openai_guardrails.py  openai_warrant.py  orchestrator_worker.py  (+7 more)
tenuo-python/examples/a2a/: README.md  crewai_delegation.py  demo.py  multi_hop_delegation.py  streaming_demo.py
tenuo-python/examples/agentql/: ARCHITECTURE.md  PERFORMANCE.md  README.md  agent.py  benchmark.py  demo.py  demo_llm.py  lazy_locator.py  mock_agentql.py  wrapper.py
tenuo-python/examples/crewai/: README.md  demo_live.py  demo_simple.py  guarded_crew.py  guarded_flow.py  hierarchical_delegation.py  quickstart.py  research_team_demo.py  yc_demo.py
tenuo-python/examples/google_adk_a2a_incident/: README.md  demo_distributed.py  tools.py
tenuo-python/examples/google_adk_incident_response/: README.md  demo.py  tools.py
tenuo-python/examples/hermes/: cron_warrant.py  gateway_multiuser.py  subagent_scope.py
tenuo-python/examples/jit_warrant_demo/: README.md  config.py  control_plane.py  demo.py  display.py  executor.py  human_approval.py  orchestrator.py  requirements.txt  tools.py
tenuo-python/examples/langchain/: README.md  integration.py  simple.py  (+4 more)
tenuo-python/src/: lib.rs
tenuo-python/tenuo/: __init__.py  _builder.py  _enforcement.py  _extension.py  _pop_canonicalize.py  _version_compat.py  approval.py  audit.py  autogen.py  bound_warrant.py  builder.py  cli.py  client.py  config.py  config_utils.py  constraints.py  control_plane.py  core.py  cp_approval.py  cp_transport.py  crewai.py  decorators.py  diagnostics.py  diff.py  exceptions.py  explain.py  explain_constraint.py  fastapi.py  guard.py  hermes.py  keys.py  langchain.py  langgraph.py  nonce.py  openai-adapter-spec-v2.2.md  openai.py  protect.py  py.typed  schemas.py  scoped.py  (+7 more)
tenuo-python/tenuo_core/: __init__.py
tenuo-python/tests/: __init__.py  conftest.py  red_team_mcp.py  test_a2a.py  test_a2a_adversarial.py  test_a2a_error_codes.py  test_a2a_handshake.py  test_a2a_warrant_stack.py  test_approval.py  test_approval_crypto_rigor.py  test_approval_envelope.py  test_arg_extraction.py  test_authorization.py  test_authorized_workflow.py  test_authorizer_config.py  test_autogen_integration.py  test_basic.py  test_capability.py  test_chain_reconstruction.py  test_cli.py  test_constraints.py  test_control_plane.py  test_core.py  test_crewai.py  test_crewai_adversarial.py  test_crewai_integration.py  test_decorators.py  test_delegation_diff.py  test_determinism_end_to_end.py  test_dx_features.py  test_dx_phase2.py  test_dx_serialization.py  test_eager_init.py  test_enforcement.py  test_error_mapping.py  test_error_taxonomy.py  test_examples.py  test_exception_wire_codes.py  test_exceptions.py  test_explain.py  (+41 more)
tenuo-wasm/: Cargo.toml
tenuo-wasm/src/: lib.rs
(+952 files in other folders)
