[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tenuo"
version = "0.1.0b3"
description = "Capability tokens for AI agents - Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Tenuo Contributors" }
]
keywords = ["authorization", "capabilities", "agents", "security", "warrants", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

# Core runtime dependencies
dependencies = [
    "PyYAML>=6.0",     # Used in langchain.py config loading
    "pydantic>=2.0",   # Used for LangChain tool schemas
]

[project.optional-dependencies]
# Feature flags for users
langchain = [
    "langchain-core>=0.2",
]
langgraph = [
    "langgraph>=0.0.10",
    "tenuo[langchain]",  # LangGraph integration needs LangChain tools
]
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]
cli = [
    "rich>=10.0.0",
]

# Development dependencies (includes features + tools)
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-requests",
    "fastapi",         # For examples/demos
    "uvicorn",
    "langchain",       # Full langchain for testing
    "langchain-openai",
    # Include optional groups in dev
    "tenuo[langchain,langgraph]",
]

[project.scripts]
tenuo = "tenuo.cli:main"

[project.urls]
Homepage = "https://tenuo.dev"
Documentation = "https://tenuo.dev/quickstart"
Repository = "https://github.com/tenuo-ai/tenuo"
Issues = "https://github.com/tenuo-ai/tenuo/issues"

[tool.maturin]
module-name = "tenuo_core"
python-source = "."
python-packages = ["tenuo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
# E402: Module level import not at top of file
# Ignored in __init__.py where we intentionally structure imports

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[[tool.maturin.sdist]]
include = ["README.md", "LICENSE*", "examples/**/*", "tenuo/**/*.py"]


