[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tenuo"
version = "0.1.0b8"
description = "Capability tokens for AI agents - Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Tenuo Contributors" }
]
keywords = ["authorization", "capabilities", "agents", "security", "warrants", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

# Core runtime dependencies
dependencies = [
    "PyYAML>=6.0",     # Used in langchain.py config loading
    "pydantic>=2.0",   # Used for LangChain tool schemas
]

[project.optional-dependencies]
# Feature flags for users - we use permissive constraints and warn at runtime
# See docs/compatibility-matrix.md for recommended versions
openai = [
    "openai>=1.0",
    "openai-agents>=0.1; python_version >= '3.10'",
]
autogen = [
    # AutoGen AgentChat requires Python 3.10+
    "autogen-agentchat>=0.7.0; python_version >= '3.10'",
    "autogen-ext[openai]>=0.7.0; python_version >= '3.10'",
]
langchain = [
    "langchain-core>=0.2",
]
langgraph = [
    "langgraph>=0.2",  # 0.2+ required for langchain-core>=0.2 compatibility
    "langchain-core>=0.2.27",  # langgraph 0.2.0 requires this minimum
]
crewai = [
    "crewai>=1.0",
]
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]
cli = [
    "rich>=10.0.0",
]
a2a = [
    "httpx>=0.24",     # Async HTTP client for A2AClient
    "starlette>=0.27", # ASGI framework for A2AServer
]
google_adk = [
    "google-adk>=0.1",  # Google Agent Development Kit
]
temporal = [
    "temporalio>=1.4.0",  # Temporal workflow orchestration
]
fastapi = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",  # ASGI server for FastAPI
]

# Development dependencies (includes features + tools)
dev = [
    # Build tools
    "maturin>=1.0",
    # Testing
    "pytest>=7.0",
    "pytest-asyncio",
    # Linting & Type checking
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-requests",
    # Examples/Demos
    "uvicorn",
    "langchain-openai",
    # Include ALL optional groups for complete dev environment
    "tenuo[openai,autogen,langchain,langgraph,crewai,a2a,google_adk,fastapi,mcp,temporal]",
]

[project.scripts]
tenuo = "tenuo.cli:main"

[project.urls]
Homepage = "https://tenuo.ai"
Documentation = "https://tenuo.ai/quickstart"
Repository = "https://github.com/tenuo-ai/tenuo"
Issues = "https://github.com/tenuo-ai/tenuo/issues"

[tool.maturin]
module-name = "tenuo_core"
python-source = "."
python-packages = ["tenuo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
# E402: Module level import not at top of file
# Ignored in __init__.py where we intentionally structure imports

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[[tool.maturin.sdist]]
include = ["README.md", "LICENSE*", "examples/**/*", "tenuo/**/*.py"]


