[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tenuo"
version = "0.1.0b18"
description = "Capability tokens for AI agents - Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Tenuo Contributors" }
]
keywords = ["authorization", "capabilities", "agents", "security", "warrants", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

# Core runtime dependencies
dependencies = [
    "PyYAML>=6.0",     # Used in langchain.py config loading
    "pydantic>=2.0",   # Used for LangChain tool schemas
]

[project.optional-dependencies]
# Feature flags for users - we use permissive constraints and warn at runtime
# See docs/compatibility-matrix.md for recommended versions
openai = [
    "openai>=1.0",
    "openai-agents>=0.1; python_version >= '3.10'",
]
autogen = [
    # AutoGen AgentChat requires Python 3.10+
    "autogen-agentchat>=0.7.0; python_version >= '3.10'",
    "autogen-ext[openai]>=0.7.0; python_version >= '3.10'",
]
langchain = [
    "langchain-core>=0.2",
]
langgraph = [
    "langgraph>=0.2",  # 0.2+ required for langchain-core>=0.2 compatibility
    "langchain-core>=0.2.27",  # langgraph 0.2.0 requires this minimum
]
crewai = [
    "crewai>=1.0; python_version >= '3.10'",
]
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]
fastmcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
    # 3.2.1+ includes client call_tool error parsing fixes (PrefectHQ/fastmcp#3778).
    "fastmcp>=3.2.1; python_version >= '3.10'",
]
cli = [
    "rich>=10.0.0",
]
a2a = [
    "httpx>=0.24",     # Async HTTP client for A2AClient
    "starlette>=0.27", # ASGI framework for A2AServer
]
google_adk = [
    "google-adk>=0.1",  # Google Agent Development Kit
]
temporal = [
    "temporalio>=1.23.0; python_version >= '3.10'",  # SimplePlugin (TenuoTemporalPlugin); workflow orchestration
    "boto3>=1.26.0",  # AWS Secrets Manager for key resolution
    "google-cloud-secret-manager>=2.16.0",  # GCP Secret Manager for key resolution
]
fastapi = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",  # ASGI server for FastAPI
]

# Development dependencies (includes features + tools)
dev = [
    # Build tools
    "maturin>=1.0",
    # Testing
    "pytest>=7.0",
    "pytest-asyncio",
    "hypothesis>=6.0",
    # Linting & Type checking
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
    "types-requests",
    # Examples/Demos
    "uvicorn",
    "langchain-openai",
    # Include ALL optional groups for complete dev environment
    "tenuo[openai,autogen,langchain,langgraph,crewai,a2a,google_adk,fastapi,mcp,fastmcp,temporal]",
]

[project.scripts]
tenuo = "tenuo.cli:main"

[project.urls]
Homepage = "https://tenuo.ai"
Documentation = "https://tenuo.ai/quickstart"
Repository = "https://github.com/tenuo-ai/tenuo"
Issues = "https://github.com/tenuo-ai/tenuo/issues"

[tool.maturin]
module-name = "tenuo_core"
python-packages = ["tenuo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    # Lifecycle / speed
    "temporal_live: tests that require an in-process Temporal server (slow, ~2-5s each)",
    # Security test categories (also declared in tests/security/conftest.py)
    "security: security/red-team tests verifying cryptographic invariants",
    "integration_responsibility: tests documenting application responsibilities (not Tenuo bugs)",
    "signature: signature and issuer trust verification",
    "monotonicity: capability attenuation / delegation monotonicity rules",
    "pop: Proof-of-Possession holder binding",
    "delegation: delegation depth and chain integrity",
    "implementation: implementation-level bypass prevention",
    # Property-based testing
    "hypothesis: property-based tests using Hypothesis",
]

[tool.coverage.run]
source = ["tenuo"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
    # Requires running Temporal server — covered by e2e tests only
    "*/tenuo/temporal.py",
    # CLI module — covered by CLI integration tests, not unit tests
    "*/tenuo/cli.py",
    # A2A client/helpers — require running A2A servers
    "*/tenuo/a2a/client.py",
    "*/tenuo/a2a/helpers.py",
    # Display/explain utility — no executable logic
    "*/tenuo/explain_constraint.py",
    # One-liner guard() — requires live LLM client
    "*/tenuo/guard.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.paths]
source = ["tenuo"]

[tool.ruff]
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
# E402: Module level import not at top of file
# Ignored in __init__.py where we intentionally structure imports

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true

[[tool.maturin.sdist]]
include = ["README.md", "LICENSE*", "examples/**/*", "tenuo/**/*.py"]


